// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceField rendering a device details with optional field 1`] = `
<DocumentFragment>
  <ion-grid>
    <ion-row>
      <ion-col>
        <ion-text>
          Header
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          Field
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          name
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          MyPhone
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          appVersion
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          1.0.1
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          appBuild
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          12.1.1
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          operatingSystem
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          Android
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          osVersion
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          OS
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          platform
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          ios
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          model
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          adadaa
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          manufacturer
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          Samsung
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          uuid
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          12313231213123asdsdad
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          isVirtual
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text />
      </ion-col>
    </ion-row>
  </ion-grid>
</DocumentFragment>
`;

exports[`DeviceField rendering a device details without device information 1`] = `
<DocumentFragment>
  <ion-grid>
    <ion-row>
      <ion-col>
        <ion-text>
          Header
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          Field
        </ion-text>
      </ion-col>
    </ion-row>
  </ion-grid>
</DocumentFragment>
`;

exports[`DeviceField rendering a device details without device information 2`] = `
<DocumentFragment>
  <ion-grid>
    <ion-row>
      <ion-col>
        <ion-text>
          Header
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          Field
        </ion-text>
      </ion-col>
    </ion-row>
  </ion-grid>
</DocumentFragment>
`;

exports[`DeviceField rendering a simple device field 1`] = `
<DocumentFragment>
  <ion-grid>
    <ion-row>
      <ion-col>
        <ion-text>
          Header
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          Field
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          name
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          MyPhone
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          diskFree
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          101001
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          appVersion
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          1.0.1
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          appBuild
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          12.1.1
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          operatingSystem
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          Android
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          osVersion
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          OS
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          platform
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          ios
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          memUsed
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          1322
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          diskTotal
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          3113131
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          model
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          adadaa
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          manufacturer
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          Samsung
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          uuid
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          12313231213123asdsdad
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          isVirtual
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text />
      </ion-col>
    </ion-row>
  </ion-grid>
</DocumentFragment>
`;
